--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@500;700&display=swap');
 
 :root {
-    --darkCyan: #3c8067;
+    --darkCyan: #3d8168;
+    --veryDarkCyan: #1a4032;
     --cream: #f2ebe3;
     --veryDarkBlue: #1c232b;
     --darkGrayishBlue: #6c7289;
@@ -114,6 +115,10 @@ main a {
     line-height: 1.06rem;
     color: var(--white);
     background-color: var(--darkCyan);
+}
+
+main a:hover {
+    background-color: var(--veryDarkCyan);
 }
 
 .attribution {
