--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 90vw;
-    height: 90vh;
+    width: 91.5vw;
+    height: 72.5vh;
     border-radius: 10px;
 }
 .card__image {
@@ -31,36 +31,29 @@ body {
     height: 100%;
     background-image: url(images/image-product-mobile.jpg); 
     background-size: cover;
-    /* border-top-left-radius: 0.63rem;
-    border-bottom-left-radius: 0.63rem; */
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 .card__content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     width: 100%;
     height: 100%;
-    /* border-top-right-radius: 0.63rem;
-    border-bottom-right-radius: 0.63rem; */
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     background-color: var(--white);      
 }
 
 header {
-    padding: 1.25rem 2rem;
+    padding: 12px 24px;
     font-family: 'Montserrat';
     font-weight: 500;
-    font-size: 0.75rem;
-    line-height: 0.94rem;
-    letter-spacing: 0.31rem;
+    font-size: 12px;
+    line-height: normal;
+    letter-spacing: 5px;
     color: var(--darkGrayishBlue);
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex-grow: 1;
-    padding: 0 2rem 2rem;
+    padding: 0 24px;
 }
 
 main h1 {
@@ -74,8 +67,8 @@ main h1 {
 main p {
     font-family: 'Montserrat';
     font-weight: 500;
-    font-size: 0.88rem;
-    line-height: 1.44rem;
+    font-size: 14px;
+    line-height: 23px;
     color: var(--darkGrayishBlue);
 }
 
