--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ header {
     font-size: 0.81rem;
     line-height: 1.44rem;
     text-decoration-line: line-through;
+    color: var(--darkGrayishBlue);
 }
 
 .main a {
@@ -112,11 +113,8 @@ header {
     background-color: var(--darkCyan);
 }
 
-main a:hover {
-    background-color: var(--veryDarkCyan);
-}
-
 .attribution {
+    font-family: 'Montserrat';
     font-size: 0.69rem; 
     text-align: center; 
 }
@@ -124,31 +122,48 @@ main a:hover {
     color: hsl(228, 45%, 44%); 
 }
 
-/* @media screen and (max-width:400px) {
-    .card {
+@media screen and (min-width:400px) {
+    .main {
         display: flex;
-        flex-direction: column;
-        margin: 1.75rem 1rem;
-        width: 21.44rem;
-        height: 38.19rem;
-    }
-    .card__image {
-        width: 100%;
-        height: 40%;
-        background-image: url(images/image-product-mobile.jpg);
-    }
-    .card__content {
-        width: 100%;
-        height: 60%;
-    }
-    header {
-        padding: 1.5rem 1.5rem 0.75rem;
+        flex-direction: row;
+        margin: 10% auto;
+        max-width: 600px;
+        height: 450px;
     }
 
-    main {
-        padding: 0 1.5rem 1.5rem;
+    .image {
+        background-image: url(images/image-product-desktop.jpg);
+        height: 100%;
+        border-bottom-left-radius: 10px;
+        border-top-right-radius: 0;
     }
-    main a {
-        width: 100%;
+
+    .content {
+        border-top-right-radius: 10px;
     }
-} */
+
+    header {
+        padding: 17px 32px 20px;
+    }
+
+    .content h1 {
+        padding: 0 32px;
+    }
+
+    .content>p {
+        padding: 24px 32px 29px;
+    }
+
+    .content__values {
+        padding: 0 32px;
+    }
+
+    .main a {
+        width: 80%;
+        margin: 32px auto;
+    }
+
+    .main a:hover {
+        background-color: var(--veryDarkCyan);
+    }
+}
