--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ header {
         flex-direction: row;
         margin: 10% auto;
         max-width: 600px;
-        height: 450px;
+        height: 53.5vh;
     }
 
     .image {
