--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     border-radius: 10px;
 }
 .image {
+    max-width: 375px;
     width: 100%;
     height: 75%;
     background-image: url(images/image-product-mobile.jpg); 
@@ -35,6 +36,7 @@ body {
     border-top-right-radius: 10px;
 }
 .content {
+    max-width: 375px;
     width: 100%;
     height: 100%;
     border-bottom-left-radius: 10px;
@@ -122,7 +124,7 @@ header {
     color: hsl(228, 45%, 44%); 
 }
 
-@media screen and (min-width:450px) {
+@media screen and (min-width:630px) {
     .main {
         display: flex;
         flex-direction: row;
