--- a/style.css
+++ b/style.css
@@ -45,17 +45,17 @@ body {
 }
 
 header {
-    padding: 12px 24px;
+    padding: 3.2% 6.4%;
     font-family: 'Montserrat';
     font-weight: 500;
-    font-size: 12px;
+    font-size: 0.75rem;
     line-height: normal;
     letter-spacing: 5px;
     color: var(--darkGrayishBlue);
 }
 
 .content h1 {
-    padding: 0 24px;
+    padding: 0 6.4%;
     font-family: 'Fraunces';
     font-weight: 700;
     font-size: 2rem;
@@ -64,16 +64,16 @@ header {
 }
 
 .content>p {
-    padding: 16px 24px 24px;
+    padding: 4.25% 6.4% 6.4%;
     font-family: 'Montserrat';
     font-weight: 500;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 23px;
     color: var(--darkGrayishBlue);
 }
 
 .content__values {
-    padding: 0 24px;
+    padding: 0 6.4%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -102,8 +102,8 @@ header {
     justify-content: center;
     gap: 0.75rem;
     width: 90%;
-    margin: 24px auto;
-    padding: 0.94rem 0;
+    margin: 7.11% auto;
+    padding: 4.45% 0;
     border-radius: 0.5rem;
     text-align: center;
     text-decoration: none;
